# ohmnibot_UTEAI

./: README.md  ohmni_ros_env
BOT_source/: README.md  README.txt
BOT_source/NativeJS/: Serial_plugin.js
Facemask_Detection/: README.md  README.txt  facemask.py
ROS_navigation/: README.md  send_goal.py
Standalone GUI/: README.md  README.txt
hieu/catkin_ws/devel/: .catkin  .rosinstall
hieu/catkin_ws/devel/include/amcl/: AMCLConfig.h
hieu/catkin_ws/devel/include/costmap_2d/: ObstaclePluginConfig.h  VoxelPluginConfig.h
hieu/catkin_ws/devel/include/global_planner/: GlobalPlannerConfig.h
hieu/catkin_ws/devel/lib/amcl/: amcl
hieu/catkin_ws/devel/lib/base_local_planner/: point_grid
hieu/catkin_ws/devel/lib/costmap_2d/: costmap_2d_cloud  costmap_2d_markers  costmap_2d_node
hieu/catkin_ws/devel/lib/fake_localization/: fake_localization
hieu/catkin_ws/src/: requirement.txt
hieu/tb_control/cmake/: tb_controlConfig.cmake
hieu/tb_control/launch/: tb_control.launch  tb_control_2.launch  tb_control_bk.launch  tb_control_depthcam.launch
hieu/tb_control/param/: depthcam.yaml  servo_ext1.yaml
ohmni_ros/: ROS.py  facemask.py  frames.gv  main.py  main_.py  offserial.py  ohmni_ros  testsocket.py
ohmni_ros/maps/: map1.yaml  thihome.yaml
ohmni_ros/tb_control/: package.xml
ohmni_ros/tb_control/launch/: tb_control.launch
ohmni_ros/tb_control/launch/include/: ohmnibot_depthcam_frames.launch
ohmni_ros/tb_control/param/: ana_bot.yaml  ohmnilabs_bot.yaml  servo_ext2.yaml  servo_neck.yaml
web/: index.html
web/css/: main.css  main.css.map
web/js/: ui.js
(+176 files in other folders)
